# geo-optimizer-skill

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.web  README.md  SCORING_RUBRIC.md  SECURITY.md  SKILL.md  action.yml  install.sh  pyproject.toml  railway.toml  render.yaml  update.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_audit_check.yml
.github/actions/geo-audit/: action.yml
.github/workflows/: ci.yml  docker.yml  geo-audit-example.yml  pages.yml  publish.yml
ai-context/: chatgpt-custom-gpt.md  chatgpt-instructions.md  claude-project.md  cursor.mdc  kiro-steering.md  windsurf.md
content/: published.md
content/articles/: 03-devto-v4-stable-release.md  03-medium-robots-txt-blocking-chatgpt.txt
docs/: ROADMAP.md  ai-bots-reference.md  ci-cd.md  geo-audit.md  geo-coherence.md  geo-fix.md  geo-history.md  geo-logs.md  geo-methods.md  geo-monitor.md  getting-started.md  index.md  llms-txt.md  mcp-server.md  schema-injector.md  scoring-rubric.md  skill-roadmap.md  skill-system.md  troubleshooting.md
examples/: example_plugin.py
references/: princeton-geo-methods.md
scripts/: geo_audit.py
site/: _config.yml  index.md  llms.txt
site/_layouts/: default.html
site/ai/: faq.json  service.json  summary.json
src/geo_optimizer/: __init__.py
src/geo_optimizer/cli/: audit_cmd.py  ci_formatter.py  diff_cmd.py  fix_cmd.py  formatters.py  github_formatter.py  history_cmd.py  html_formatter.py  llms_cmd.py  logs_cmd.py  main.py  monitor_cmd.py  pdf_formatter.py  rich_formatter.py  schema_cmd.py  scoring_helpers.py  track_cmd.py
src/geo_optimizer/core/: audit.py  audit_ai_discovery.py  audit_brand.py  audit_cdn.py  audit_citation_map.py  audit_content.py  audit_context_window.py  audit_decay.py  audit_embedding.py  audit_instruction.py  audit_js.py  audit_llms.py  audit_meta.py  audit_negative.py  audit_robots.py  audit_schema.py  audit_signals.py  audit_webmcp.py  batch_audit.py  citability.py  diffing.py  factual_accuracy.py  fixer.py  history.py  injection_detector.py  llm_client.py  llms_generator.py  log_analyzer.py  monitor.py  prompt_library.py  registry.py  schema_injector.py  schema_validator.py  scoring.py  trust_stack.py
src/geo_optimizer/i18n/: __init__.py
src/geo_optimizer/mcp/: __init__.py  server.py
src/geo_optimizer/models/: config.py  project_config.py  results.py
src/geo_optimizer/skills/catalog/geo_ai_discovery_readiness/: prompt.md  skill.yaml
src/geo_optimizer/skills/catalog/geo_trust_signal_review/: prompt.md  skill.yaml
src/geo_optimizer/utils/: cache.py  http.py  http_async.py  robots_parser.py  validators.py
src/geo_optimizer/web/: __init__.py  app.py  badge.py  cli.py
src/geo_optimizer/web/docs/: geo-audit.md  geo-diff.md  geo-methods.md  geo-track.md  getting-started.md  index.md  mcp-server.md  skill-system.md
src/geo_optimizer/web/templates/: compare.html  docs.html  index.html  manifesto.html  research.html  roadmap.html
tests/: test_ai_discovery.py  test_async.py  test_brand_entity_signals.py  test_cdn_js_checks.py  test_ci_formatter.py  test_citability.py  test_citation_map.py  test_cli.py  test_content_decay.py  test_core.py  test_coverage_m1.py  test_diff.py  test_embedding_proximity.py  test_factual_accuracy.py  test_fix.py  test_history.py  test_http_async.py  test_instruction_readiness.py  test_llms_v2_validation.py  test_log_analyzer.py  test_mcp.py  test_monitor.py  test_p0_security_fixes.py  test_pdf.py  test_performance_budget.py  test_registry.py  test_ricerca_2025_2026.py  test_schema_richness_394.py  test_security_critical.py  test_security_m1.py  test_skill_system.py  test_ssrf_hardening.py  test_trust_stack.py  test_v21_coverage.py  test_v2_remaining_fixes.py  test_web_app.py  test_web_history.py
